--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,16 @@
             "email": "info@workwithhuddle.com"
         }
     ],
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "git@github.com:moonbaselabs/zendesk_api_client_php.git"
+        }
+    ],
     "require": {
         "php": ">=5.4.0",
         "illuminate/support": "~5.4|^6.0|^7.0",
-        "zendesk/zendesk_api_client_php": "2.*"
+        "zendesk/zendesk_api_client_php": "dev-tags"
     },
     "extra": {
         "laravel": {
